@@ -17,6 +17,7 @@ import org.springframework.stereotype.Repository;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import static com.edu.xmu.rag.core.model.Constants.MAX_RETURN;
 import static com.edu.xmu.rag.core.util.Common.cloneObj;
@@ -72,7 +73,9 @@ public class ChatDao {
         if (ret.isEmpty()) {
             return new ArrayList<>();
         } else {
-            return ret.stream().map(po -> cloneObj(po, Chat.class)).toList();
+            return ret.stream()
+                    .map(po -> cloneObj(po, Chat.class))
+                    .collect(Collectors.toList());
         }
     }
 
